--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 @layer base {
     :root {
       --background: 0 0% 100%;
@@ -33,6 +34,16 @@
       --ring: 0 0% 3.9%;
 
       --radius: 0.5rem;
+
+      --color-1: oklch(66.2% 0.225 25.9);
+
+      --color-2: oklch(60.4% 0.26 302);
+
+      --color-3: oklch(69.6% 0.165 251);
+
+      --color-4: oklch(80.2% 0.134 225);
+
+      --color-5: oklch(90.7% 0.231 133);
     }
 
     .dark {
@@ -63,6 +74,14 @@
       --border: 0 0% 14.9%;
       --input: 0 0% 14.9%;
       --ring: 0 0% 83.1%;
+      --color-1: oklch(66.2% 0.225 25.9);
+      --color-2: oklch(60.4% 0.26 302);
+      --color-3: oklch(69.6% 0.165 251);
+      --color-4: oklch(80.2% 0.134 225);
+      --color-5: oklch(90.7% 0.231 133);
+    }
+  .theme {
+        --animate-rainbow: rainbow var(--speed, 2s) infinite linear;
     }
   }
 
@@ -78,11 +97,11 @@
   h3 code {
     @apply !text-lg md:!text-xl;
   }
-  
+
   pre {
     @apply !px-0 rounded-lg overflow-x-auto py-4
   }
-   
+
   pre [data-line] {
     @apply px-4
   }
@@ -90,17 +109,17 @@
   code {
     @apply text-sm md:text-base !leading-loose;
   }
-  
+
   pre > code {
     counter-reset: line;
   }
-  
+
   code[data-theme*=" "],
   code[data-theme*=" "] span {
     color: var(--shiki-light);
     background-color: var(--shiki-light-bg);
   }
-   
+
   @media (prefers-color-scheme: dark) {
     code[data-theme*=" "],
     code[data-theme*=" "] span {
@@ -108,25 +127,25 @@
       background-color: var(--shiki-dark-bg);
     }
   }
-  
+
   code[data-line-numbers] {
     counter-reset: line;
   }
-  
+
   code[data-line-numbers] > [data-line]::before {
     counter-increment: line;
     content: counter(line);
     @apply inline-block w-4 mr-4 text-right text-gray-500;
   }
- 
+
   code {
     counter-reset: line;
   }
- 
+
   code > [data-line]::before {
   counter-increment: line;
   content: counter(line);
- 
+
   /* Other styling */
   display: inline-block;
   width: 1rem;
@@ -134,11 +153,22 @@
   text-align: right;
   color: gray;
 }
- 
+
 code[data-line-numbers-max-digits="2"] > [data-line]::before {
   width: 2rem;
 }
- 
+
 code[data-line-numbers-max-digits="3"] > [data-line]::before {
   width: 3rem;
+}
+
+@theme inline {
+  @keyframes rainbow {
+  0% {
+    background-position: 0%;
+        }
+  100% {
+    background-position: 200%;
+        }
+    }
 }
